# real-desert-library

./: CMakeLists.txt  keys.h
qml/: main.qml
qml/base/: ModalDialog.qml
qml/components/: EpisodeFilter.qml  EpisodeList.qml  ExtrasList.qml  MoviesFilter.qml  MoviesList.qml  PersonSearch.qml  ShowsFilter.qml  ShowsList.qml
qml/dialogs/: EpisodeDetailDialog.qml  EpisodeMatcherDialog.qml  ExtrasNamingDialog.qml  MovieSearchDialog.qml  PeopleSearchDialog.qml  ShowDetailDialog.qml  ShowSearchDialog.qml
qml/infra/: Blocker.qml  SnackbarItem.qml  SnackbarList.qml
qml/molecules/: CheckField.qml  DefinitionList.qml  Foldable.qml  HeaderIcon.qml  HeaderText.qml  LongText.qml  PeopleList.qml  PillList.qml  PlaybackIcon.qml  PlaybackMenu.qml  SelectItem.qml  SelectList.qml  SelectOne.qml  SortOrderCombo.qml  SubtitleMenu.qml
qml/pages/: About.qml  Extras.qml  Movies.qml  Show.qml  Shows.qml
src/: main.cpp
src/app/: application.cpp  application.h
src/app/init/: database.cpp  database.h  imdb.cpp  imdb.h
src/app/init/migration/: initial.h  migrate.cpp  migrate.h  optimize.h
src/db/: cast-crew.cpp  cast-crew.h  database.cpp  database.h  episodes.cpp  episodes.h  extras.cpp  extras.h  files.cpp  files.h  genres.cpp  genres.h  movies.cpp  movies.h  playbacks.cpp  playbacks.h  shows.cpp  shows.h  tags.cpp  tags.h
src/db/migration/: initial.h  migration.h  optimize.h
src/enums/: extras-type.cpp  extras-type.h  sort-order.cpp  sort-order.h
src/lib/: add-movie.cpp  add-movie.h  add-show.cpp  add-show.h  format.h  imdb-parser.cpp  imdb-parser.h  local-path.cpp  local-path.h  media-meta.cpp  media-meta.h
src/model/: cast.cpp  cast.h  crew.cpp  crew.h  episode-list-item.cpp  episode-list-item.h  episode.cpp  episode.h  extra-list-item.cpp  extra-list-item.h  extra.cpp  extra.h  file.cpp  file.h  genre.cpp  genre.h  imdb-genres.cpp  imdb-genres.h  movie-filter.cpp  movie-filter.h  movie-list-item.cpp  movie-list-item.h  movie-search-result.cpp  movie-search-result.h  person.cpp  person.h  playback.cpp  playback.h  show-filter.cpp  show-filter.h  show-list-item.cpp  show-list-item.h  show-search-result.cpp  show-search-result.h  show.cpp  show.h  sort-order.h
src/net/imdb/: imdb.cpp  imdb.h
src/net/tmdb/: movie.cpp  movie.h  show.cpp  show.h
src/ui/: busy-handler.cpp  busy-handler.h  dialog-blocker.cpp  dialog-blocker.h  file-handler.cpp  file-handler.h  mode-handler.cpp  mode-handler.h  sort-order-wrapper.cpp  sort-order-wrapper.h  ui.cpp  ui.h  warnings.cpp  warnings.h
src/ui/extras/: add-extras.cpp  add-extras.h  extras.cpp  extras.h
src/ui/movie/: movie.cpp  movie.h
src/ui/movies/: movie-search-list.cpp  movie-search-list.h  movies-filter.cpp  movies-filter.h  movies-list.cpp  movies-list.h  movies.cpp  movies.h
src/ui/people/: people-search.cpp  people-search.h  person-search.cpp  person-search.h
src/ui/show/: cast-list.cpp  cast-list.h  episode-details.cpp  episode-details.h  episode-list.cpp  episode-list.h  episode-match.cpp  episode-match.h  show-details.cpp  show-details.h  show.cpp  show.h
src/ui/shows/: show-search-list.cpp  show-search-list.h  shows-filter.cpp  shows-filter.h  shows-genre-list.cpp  shows-genre-list.h  shows-list.cpp  shows-list.h  shows-tags-list.cpp  shows-tags-list.h  shows.cpp  shows.h
